--- a/ProgettoGiocoBattagliaNavale/src/Start.form
+++ b/ProgettoGiocoBattagliaNavale/src/Start.form
@@ -66,15 +66,15 @@
           <foreground color="-723457"/>
         </properties>
       </component>
-      <component id="fc343" class="javax.swing.JButton" binding="button1" default-binding="true">
+      <component id="fc343" class="javax.swing.JButton" binding="btnInizia">
         <constraints>
           <grid row="9" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-4521728"/>
-          <enabled value="false"/>
+          <enabled value="true"/>
           <foreground color="-16777216"/>
-          <text value="Button"/>
+          <text value="Comincia"/>
         </properties>
       </component>
       <component id="1535d" class="javax.swing.JLabel" binding="NomeGiocatore1">
