--- a/ProgettoGiocoBattagliaNavale/src/Battlefield.form
+++ b/ProgettoGiocoBattagliaNavale/src/Battlefield.form
@@ -586,9 +586,12 @@
       </component>
       <component id="7ca55" class="javax.swing.JLabel" binding="crntPlayer">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-14505984"/>
+          <enabled value="true"/>
+          <foreground color="-14505984"/>
           <text value="Player corrente"/>
         </properties>
       </component>
@@ -603,9 +606,10 @@
       </component>
       <component id="5bee4" class="javax.swing.JLabel" binding="lblAction">
         <constraints>
-          <grid row="0" column="5" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="5" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-4520960"/>
           <text value="Azione corrente"/>
         </properties>
       </component>
