--- a/ProgettoGiocoBattagliaNavale/src/BattelfieldGrid.form
+++ b/ProgettoGiocoBattagliaNavale/src/BattelfieldGrid.form
@@ -15,7 +15,16 @@
         </constraints>
         <properties/>
         <border type="none"/>
-        <children/>
+        <children>
+          <component id="e57f1" class="javax.swing.JLabel" binding="lblTitle">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Ciao"/>
+            </properties>
+          </component>
+        </children>
       </grid>
       <grid id="be851" binding="pnlButtons" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
